# FromTheBridge

./: .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: ftb-adapter-validator.md  ftb-code-reviewer.md  ftb-preflight.md  ftb-security.md
.claude/hooks/: guard-clickhouse-reads.sh  guard-ddl.sh  guard-forbidden-targets.sh  guard-sql-in-files.sh  post-commit-reminder.sh
.claude/reports/: T5_training_windows.json  benchmark_export_baseline.json  benchmark_final_query.json
.claude/state/: phase-status.md
db/migrations/: 0001_phase0_schema.sql
docker/clickhouse/: config.xml  users.xml
docker/dagster/: Dockerfile  dagster.yaml  entrypoint.sh  workspace.yaml
docker/minio/: entrypoint.sh
docs/Historical/: 2026-03-06-agent-team-design.md  2026-03-06-agent-team-implementation.md  2026-03-08-pipeline-triage.md  2026-03-08-solo-operator-ops-design.md  2026-03-09-alignment-audit-handoff.md  2026-03-09-instrument-admission-design.md  Canonical Investment Data Lakehouse.txt  FromTheBridge_Design_v1.1.docx  FromTheBridge_Design_v1.docx  FromTheBridge_Predesign_v1.md  FromTheBridge_design.md  Layers Overview Canonical.md  T3b_data_quality_audit.md  T3b_handoff.md  T5_patch_handoff.md  architecture.yaml  design_index.md  eds-cross-source-metrics-assessment.md  eds-integration-handoff.md  ftb-pipeline-gapfill-handoff.md  repo-structure.md
docs/design/: FromTheBridge_design_v3.1.md  FromTheBridge_design_v4.0.md  V3.1_REVIEW_HANDOFF_SESSION2.md  V3.1_REVIEW_HANDOFF_SESSION3.md  V3_REVIEW_HANDOFF.md  design_index.md
docs/plans/: 2026-03-09-ftb-housekeeping.md  2026-03-09-housekeeping-handoff.md  2026-03-09-seed-reconciliation-handoff.md  2026-03-09-ssot-reconciliation-handoff.md  2026-03-10-empire-to-forge-sync-design.md  2026-03-10-empire-to-forge-sync-plan.md  2026-03-10-gold-export-plan.md  2026-03-10-sync-bridge-handoff.md  2026-03-10-tiingo-adapter-design.md  2026-03-10-tiingo-adapter-handoff.md  2026-03-10-tiingo-adapter-plan.md  decision-outcomes.md  ftb-tech-intel-handoff.md  tiingo-eds-migration-handoff.md
docs/runbooks/: FTB-01-adapter-data-gap-backfill.md  (+8 more)
scripts/: backfill_tiingo.py  benchmark_final_query.py  check_backfill.py  ftb_backup.sh  init_dagster_db.sh  init_secrets.sh  setup_minio_service_accounts.sh
(+85 files in other folders)
