[project]
name = "ftb"
version = "0.1.0"
description = "FromTheBridge — Crypto market intelligence lakehouse"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9",
    "dagster-postgres>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
