[project]
name = "ftb"
version = "0.1.0"
description = "FromTheBridge — Crypto market intelligence lakehouse"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9",
    "dagster-postgres>=0.25",
    "httpx>=0.27",
    "clickhouse-connect>=0.7",
    "minio>=7.2",
    "pyarrow>=15.0",
    "psycopg2-binary>=2.9",
    "pyiceberg[s3fs]>=0.9",
    "duckdb>=1.4",
    "great-expectations>=1.15.0",
]

[project.optional-dependencies]
dagster-webserver = ["dagster-webserver>=1.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
